# spce_manage

./: .gitignore  CMakeLists.txt  README.md
spce/: CMakeLists.txt  Main.qml  Style.qml  main.cpp  spce_ui.qrc  spceapp.rc  uicontroller.cpp  uicontroller.h
spce/components/: DateChooser.qml  DatePicker.qml  FormSection.qml  FormSectionTitle.qml  LineEdit.qml  MCalendar.qml  MComboBox.qml  MenuButton.qml  MultiLine.qml  RotatingIconBtn.qml  TextButton.qml  TextIconBtn.qml
spce/pages/: Invoices.qml  OperationPage.qml  SchedulePage.qml
spce_core/: CMakeLists.txt
spce_core/include/: apicaller.h  baseEntityListModel.h  baseEntityNameModel.h  basebsdentity.h  baseentity.h  bsd.h  bsddao.h  chartmodel.h  collecteur.h  collecteurdao.h  commissionnaire.h  commissionnairedao.h  corecontroller.h  dao.h  databasemanager.h  documentformmodel.h  documentwriter.h  driver.h  driverdao.h  eliminateur.h  eliminateurdao.h  flagsvgdownloader.h  inja.hpp  invoice.h  invoicedao.h  invoicetablemodel.h  mgtoaport.h  property_helper.h  revenuechartmodel.h  schedule.h  schedulelistmodel.h  ship.h  shipdao.h  shipdetailmodel.h  shiplistmodel.h  spce_core_global.h  terminal.h  terminallistmodel.h  vehicle.h  vehicledao.h
spce_core/src/: apicaller.cpp  basebsdentity.cpp  baseentity.cpp  bsd.cpp  bsddao.cpp  chartmodel.cpp  collecteur.cpp  collecteurdao.cpp  commissionnaire.cpp  commissionnairedao.cpp  corecontroller.cpp  databasemanager.cpp  documentformmodel.cpp  documentwriter.cpp  driver.cpp  driverdao.cpp  eliminateur.cpp  eliminateurdao.cpp  flagsvgdownloader.cpp  invoice.cpp  invoicedao.cpp  invoicetablemodel.cpp  mgtoaport.cpp  revenuechartmodel.cpp  schedule.cpp  schedulelistmodel.cpp  ship.cpp  shipdao.cpp  shipdetailmodel.cpp  shiplistmodel.cpp  terminal.cpp  terminallistmodel.cpp  vehicle.cpp  vehicledao.cpp
spce_core/templates/: bsd.html  certificate.html  invoice.html
